--- a/main/css/the_cool_science_webpage.css
+++ b/main/css/the_cool_science_webpage.css
@@ -84,6 +84,29 @@
 }
 
 /*Cookie Popup*/
+
+.cookieoverlay {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: var(--search-overlay-bg);
+  box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+  backdrop-filter: blur( 7.0px );
+  -webkit-backdrop-filter: blur( 7.0px );
+  opacity: 1;
+  visibility: visible;
+  z-index: 10;
+}
+
+.cookieoverlay.hide{
+  opacity: 0;
+  pointer-events: none;
+  transform: scale(0.8);
+  transition: all 0.3s ease;
+}
+
 .wrapper{
   position: fixed;
   bottom: 2%;
@@ -98,13 +121,6 @@
   text-align: center;
   z-index: 99;
   transition: 1.5s
-}
-
-.wrapper.hide{
-  opacity: 0;
-  pointer-events: none;
-  transform: scale(0.8);
-  transition: all 0.3s ease;
 }
 
 ::selection{
@@ -191,6 +207,8 @@
       display: block;
       width: 90%;
       left: 5%;
+      top: 30%;
+      bottom: auto;
       padding: 15px 25px 15px 10px;
    }
    
@@ -628,6 +646,7 @@ input[type=text]:focus {
   backdrop-filter: blur( 7.0px );
   -webkit-backdrop-filter: blur( 7.0px );
 }
+
 .overlay:target {
   visibility: visible;
   opacity: 1;
